--- a/src/main/resources/application-docker.conf
+++ b/src/main/resources/application-docker.conf
@@ -1,13 +1,37 @@
 include "application.base.conf"
 
+ec {
+    thread-number = ${PRICE_GETTER_NUM_THREADS}
+}
+
 web3 {
     polygon {
         connection {
             url = ${PRICE_GETTER_WEB3_POLYGON_CONNECTION_URL}
             websocketUrl = ${PRICE_GETTER_WEB3_POLYGON_CONNECTION_WS}
         }
-        price-orcale {
+        price-oracle {
             address = ${PRICE_GETTER_WEB3_POLYGON_PRICE_ORACLE_ADDRESS}
+        }
+    }
+
+    bsc {
+        connection {
+            url = ${PRICE_GETTER_WEB3_BSC_CONNECTION_URL}
+            websocketUrl = ${PRICE_GETTER_WEB3_BSC_CONNECTION_WS}
+        }
+        price-oracle {
+            address = ${PRICE_GETTER_WEB3_BSC_PRICE_ORACLE_ADDRESS}
+        }
+    }
+
+    eth {
+        connection {
+            url = ${PRICE_GETTER_WEB3_ETH_CONNECTION_URL}
+            websocketUrl = ${PRICE_GETTER_WEB3_ETH_CONNECTION_WS}
+        }
+        price-oracle {
+            address = ${PRICE_GETTER_WEB3_ETH_PRICE_ORACLE_ADDRESS}
         }
     }
 
