--- a/src/main/resources/application.base.conf
+++ b/src/main/resources/application.base.conf
@@ -6,33 +6,53 @@ ec {
 web3 {
     polygon {
         connection {
-            url = url
-            websocketUrl = websockUrl
+            url = "hurl"
+            websocketUrl = "url
         }
         price-oracle {
-            address = address
+            address = "qddy"
+        }
+    }
+
+    bsc {
+        connection {
+            url = "url"
+            websocketUrl = "url"
+        }
+        price-oracle {
+            address = "qddy"
+        }
+    }
+
+    eth {
+        connection {
+            url = "url"
+            websocketUrl = "url"
+        }
+        price-oracle {
+            address = "addy"
         }
     }
 
     wallet {
-        path = path/to/wallet
-        pwd = wallet_pwd
+        path = "wallet"
+        pwd = "pwd"
     }
 
 }
 
 scalatra {
-    env = prod
-    port = 123
-    base_url = "/fhefh"
-    version = rhjgr
+    env = "prod"
+    port = 1234
+    base_url = "/api"
+    version = "v1"
 
 }
 
 sql {
     connection {
-        path = "jdbc:mysql://fep"
-        username = fegrrapper
-        password = e559
+        path = "def"
+        username = defrg
+        password = defrgt
     }
 }
