--- a/src/main/resources/application-docker.conf
+++ b/src/main/resources/application-docker.conf
@@ -35,6 +35,16 @@ web3 {
         }
     }
 
+    ftm {
+        connection {
+            url = ${PRICE_GETTER_WEB3_FTM_CONNECTION_URL}
+            websocketUrl = ${PRICE_GETTER_WEB3_FTM_CONNECTION_WS}
+        }
+        price-oracle {
+            address = ${PRICE_GETTER_WEB3_FTM_PRICE_ORACLE_ADDRESS}
+        }
+    }
+
     wallet {
         path = ${PRICE_GETTER_WEB3_PATH_WALLET}
         pwd = ${PRICE_GETTER_WEB3_PWD_WALLET}
