--- a/src/main/resources/application.base.conf
+++ b/src/main/resources/application.base.conf
@@ -7,7 +7,7 @@ web3 {
     polygon {
         connection {
             url = "hurl"
-            websocketUrl = "url
+            websocketUrl = "url"
         }
         price-oracle {
             address = "qddy"
@@ -25,6 +25,16 @@ web3 {
     }
 
     eth {
+        connection {
+            url = "url"
+            websocketUrl = "url"
+        }
+        price-oracle {
+            address = "addy"
+        }
+    }
+
+    ftm {
         connection {
             url = "url"
             websocketUrl = "url"
@@ -52,7 +62,7 @@ scalatra {
 sql {
     connection {
         path = "def"
-        username = defrg
-        password = defrgt
+        username = "defrg"
+        password = "defrgt"
     }
 }
