--- a/src/main/resources/application-docker.conf
+++ b/src/main/resources/application-docker.conf
@@ -61,9 +61,18 @@ scalatra {
 }
 
 sql {
-    connection {
-        path = ${PRICE_GETTER_SQL_CONN_PATH}
-        username = ${PRICE_GETTER_SQL_USERNAME}
-        password = ${PRICE_GETTER_SQL_PASSWORD}
+    block-indexer {
+        connection {
+            path = ${PRICE_GETTER_SQL_CONN_PATH_BLOCK_IDX}
+            username = ${PRICE_GETTER_SQL_USERNAME_BLOCK_IDX}
+            password = ${PRICE_GETTER_SQL_PASSWORD_BLOCK_IDX}
+        }
+    }
+    price-db {
+        connection {
+            path = ${PRICE_GETTER_SQL_CONN_PATH_PRICE_DB}
+            username = ${PRICE_GETTER_SQL_USERNAME_PRICE_DB}
+            password = ${PRICE_GETTER_SQL_PASSWORD_PRICE_DB}
+        }
     }
 }
