--- a/src/main/resources/application.base.conf
+++ b/src/main/resources/application.base.conf
@@ -60,9 +60,18 @@ scalatra {
 }
 
 sql {
-    connection {
-        path = "def"
-        username = "defrg"
-        password = "defrgt"
+    block-indexer {
+        connection {
+            path = "def"
+            username = "defrg"
+            password = "defrgt"
+        }
+    }
+    price-db {
+        connection {
+            path = "def"
+            username = "defrg"
+            password = "defrgt"
+        }
     }
 }
